[package]
name = "rustserve-platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustserve = { path = "../rustserve" }

http = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"

tracing = "0.1"
tracing-subscriber = "0.2.0"
tracing-futures = "0.2.5"

tokio = { version = "1", features = [ "macros", "rt-multi-thread", "net" ] }

futures = { version = "0.3.1" }

bytes = "1"
hyper = { version = "=1.0.0-rc.3", features = ["full"] }
http-body = "=1.0.0-rc.2"
http-body-util = { version = "=0.1.0-rc.2" }

tokio-rustls = "0.23.4"
rustls-pemfile = "0.2.1"
